--- a/simulaciones-tp5/src/front/Tabla.form
+++ b/simulaciones-tp5/src/front/Tabla.form
@@ -90,13 +90,9 @@
                 <Component class="javax.swing.JTable" name="_tblSimulacion">
                   <Properties>
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                      <Table columnCount="27" rowCount="1">
-                        <Column editable="false" title="Evento" type="java.lang.String">
-                          <Data value="Inicio"/>
-                        </Column>
-                        <Column editable="false" title="Reloj" type="java.lang.Float">
-                          <Data value="0.0"/>
-                        </Column>
+                      <Table columnCount="27" rowCount="0">
+                        <Column editable="false" title="Evento" type="java.lang.String"/>
+                        <Column editable="false" title="Reloj" type="java.lang.Float"/>
                         <Column editable="false" title="RND1" type="java.lang.Float"/>
                         <Column editable="false" title="RND2" type="java.lang.Float"/>
                         <Column editable="false" title="Llegada entre cliente" type="java.lang.Float"/>
