--- a/simulaciones-tp5/src/front/Tabla.form
+++ b/simulaciones-tp5/src/front/Tabla.form
@@ -72,7 +72,7 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="17" max="-2" attributes="0"/>
-                      <Component id="_scpTabla" pref="356" max="32767" attributes="0"/>
+                      <Component id="_scpTabla" pref="331" max="32767" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="jButton1" min="-2" max="-2" attributes="0"/>
                   </Group>
@@ -93,37 +93,42 @@
                       <Table columnCount="27" rowCount="0">
                         <Column editable="false" title="Evento(0)" type="java.lang.String"/>
                         <Column editable="false" title="Reloj(1)" type="java.lang.Float"/>
-                        <Column editable="false" title="RND1(2)" type="java.lang.Float"/>
-                        <Column editable="false" title="RND2(3)" type="java.lang.Float"/>
-                        <Column editable="false" title="Llegada entre cliente(4)" type="java.lang.Float"/>
-                        <Column editable="false" title="Pr&#xf3;xima llegada(5)" type="java.lang.Float"/>
-                        <Column editable="false" title="RND(6)" type="java.lang.Float"/>
+                        <Column editable="false" title="Llegada Cl RND1(2)" type="java.lang.Float"/>
+                        <Column editable="false" title="Llegada Cl RND2(3)" type="java.lang.Float"/>
+                        <Column editable="false" title="Llegada entre clientes(4)" type="java.lang.Float"/>
+                        <Column editable="false" title="Pr&#xf3;xima llegada cliente(5)" type="java.lang.Float"/>
+                        <Column editable="false" title="Accion RND(6)" type="java.lang.Float"/>
                         <Column editable="false" title="Acci&#xf3;n(7)" type="java.lang.String"/>
-                        <Column editable="false" title="Fin atenci&#xf3;n en caja(8)" type="java.lang.Float"/>
-                        <Column editable="false" title="RND(9)" type="java.lang.Float"/>
+                        <Column editable="false" title="Tiempo Fin atenci&#xf3;n en caja(8)" type="java.lang.Float"/>
+                        <Column editable="false" title="RND tiempo espera(9)" type="java.lang.Float"/>
                         <Column editable="false" title="Tiempo espera pedido(10)" type="java.lang.Float"/>
                         <Column editable="false" title="Tiempo entrega pedido(11)" type="java.lang.Float"/>
-                        <Column editable="false" title="RND(12)" type="java.lang.Float"/>
+                        <Column editable="false" title="RND acc mesa(12)" type="java.lang.Float"/>
                         <Column editable="false" title="Acci&#xf3;n - Mesa(13)" type="java.lang.String"/>
-                        <Column editable="false" title="RND(14)" type="java.lang.Float"/>
+                        <Column editable="false" title="RND tiempo uso mesa(14)" type="java.lang.Float"/>
                         <Column editable="false" title="Tiempo de uso de mesa(15)" type="java.lang.Float"/>
-                        <Column editable="false" title="RND(16)" type="java.lang.Float"/>
-                        <Column editable="false" title="Tiempo de consumici&#xf3;n(17)" type="java.lang.Float"/>
-                        <Column editable="false" title="Tiempo fin de consumici&#xf3;n(18)" type="java.lang.Float"/>
-                        <Column editable="false" title="Cajero Estado(19)" type="java.lang.String"/>
-                        <Column editable="false" title="Cajero cola(20)" type="java.lang.Integer"/>
-                        <Column editable="false" title="Empl 1 estado(21)" type="java.lang.String"/>
-                        <Column editable="false" title="Empl 1 Cola(22)" type="java.lang.Integer"/>
-                        <Column editable="false" title="Empl 2 Estado(23)" type="java.lang.String"/>
-                        <Column editable="false" title="Empl 2 Cola(24)" type="java.lang.Integer"/>
-                        <Column editable="false" title="Tiempo permanencia(25)" type="java.lang.Float"/>
-                        <Column editable="true" title="Cantidad clientes en cafeter&#xed;a(26)" type="java.lang.Integer"/>
+                        <Column editable="false" title="Tiempo Fin uso mesa (16)" type="java.lang.Float"/>
+                        <Column editable="false" title="RND tiempo consumicion(17)" type="java.lang.Float"/>
+                        <Column editable="false" title="Tiempo de consumici&#xf3;n(18)" type="java.lang.Float"/>
+                        <Column editable="false" title="Tiempo fin de consumici&#xf3;n(19)" type="java.lang.Float"/>
+                        <Column editable="false" title="Estado Cajero(20)" type="java.lang.String"/>
+                        <Column editable="false" title="Cola Cajero(21)" type="java.lang.Integer"/>
+                        <Column editable="false" title="Estado Empl 1(22)" type="java.lang.String"/>
+                        <Column editable="false" title="Cola Empleados(23)" type="java.lang.Integer"/>
+                        <Column editable="false" title="Estado Empl 2(24)" type="java.lang.String"/>
+                        <Column editable="false" title="Tiempo permanencia AC(25)" type="java.lang.Float"/>
+                        <Column editable="false" title="Cantidad clientes en cafeter&#xed;a CONT(26)" type="java.lang.Integer"/>
                       </Table>
                     </Property>
                     <Property name="autoResizeMode" type="int" value="0"/>
                     <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                       <TableColumnModel selectionModel="0">
-                        <Column maxWidth="-1" minWidth="-1" prefWidth="70" resizable="true">
+                        <Column maxWidth="-1" minWidth="-1" prefWidth="120" resizable="false">
+                          <Title/>
+                          <Editor/>
+                          <Renderer/>
+                        </Column>
+                        <Column maxWidth="-1" minWidth="-1" prefWidth="70" resizable="false">
                           <Title/>
                           <Editor/>
                           <Renderer/>
@@ -133,7 +138,17 @@
                           <Editor/>
                           <Renderer/>
                         </Column>
-                        <Column maxWidth="-1" minWidth="-1" prefWidth="50" resizable="false">
+                        <Column maxWidth="-1" minWidth="-1" prefWidth="50" resizable="true">
+                          <Title/>
+                          <Editor/>
+                          <Renderer/>
+                        </Column>
+                        <Column maxWidth="-1" minWidth="-1" prefWidth="150" resizable="false">
+                          <Title/>
+                          <Editor/>
+                          <Renderer/>
+                        </Column>
+                        <Column maxWidth="-1" minWidth="-1" prefWidth="150" resizable="false">
                           <Title/>
                           <Editor/>
                           <Renderer/>
@@ -143,7 +158,7 @@
                           <Editor/>
                           <Renderer/>
                         </Column>
-                        <Column maxWidth="-1" minWidth="-1" prefWidth="200" resizable="false">
+                        <Column maxWidth="-1" minWidth="-1" prefWidth="150" resizable="false">
                           <Title/>
                           <Editor/>
                           <Renderer/>
@@ -153,7 +168,82 @@
                           <Editor/>
                           <Renderer/>
                         </Column>
-                        <Column maxWidth="-1" minWidth="-1" prefWidth="50" resizable="false">
+                        <Column maxWidth="-1" minWidth="-1" prefWidth="50" resizable="true">
+                          <Title/>
+                          <Editor/>
+                          <Renderer/>
+                        </Column>
+                        <Column maxWidth="-1" minWidth="-1" prefWidth="160" resizable="false">
+                          <Title/>
+                          <Editor/>
+                          <Renderer/>
+                        </Column>
+                        <Column maxWidth="-1" minWidth="-1" prefWidth="160" resizable="false">
+                          <Title/>
+                          <Editor/>
+                          <Renderer/>
+                        </Column>
+                        <Column maxWidth="-1" minWidth="-1" prefWidth="50" resizable="true">
+                          <Title/>
+                          <Editor/>
+                          <Renderer/>
+                        </Column>
+                        <Column maxWidth="-1" minWidth="-1" prefWidth="160" resizable="false">
+                          <Title/>
+                          <Editor/>
+                          <Renderer/>
+                        </Column>
+                        <Column maxWidth="-1" minWidth="-1" prefWidth="50" resizable="true">
+                          <Title/>
+                          <Editor/>
+                          <Renderer/>
+                        </Column>
+                        <Column maxWidth="-1" minWidth="-1" prefWidth="160" resizable="false">
+                          <Title/>
+                          <Editor/>
+                          <Renderer/>
+                        </Column>
+                        <Column maxWidth="-1" minWidth="-1" prefWidth="160" resizable="false">
+                          <Title/>
+                          <Editor/>
+                          <Renderer/>
+                        </Column>
+                        <Column maxWidth="-1" minWidth="-1" prefWidth="50" resizable="true">
+                          <Title/>
+                          <Editor/>
+                          <Renderer/>
+                        </Column>
+                        <Column maxWidth="-1" minWidth="-1" prefWidth="160" resizable="false">
+                          <Title/>
+                          <Editor/>
+                          <Renderer/>
+                        </Column>
+                        <Column maxWidth="-1" minWidth="-1" prefWidth="170" resizable="false">
+                          <Title/>
+                          <Editor/>
+                          <Renderer/>
+                        </Column>
+                        <Column maxWidth="-1" minWidth="-1" prefWidth="160" resizable="false">
+                          <Title/>
+                          <Editor/>
+                          <Renderer/>
+                        </Column>
+                        <Column maxWidth="-1" minWidth="-1" prefWidth="160" resizable="false">
+                          <Title/>
+                          <Editor/>
+                          <Renderer/>
+                        </Column>
+                        <Column maxWidth="-1" minWidth="-1" prefWidth="170" resizable="false">
+                          <Title/>
+                          <Editor/>
+                          <Renderer/>
+                        </Column>
+                        <Column maxWidth="-1" minWidth="-1" prefWidth="160" resizable="false">
+                          <Title/>
+                          <Editor/>
+                          <Renderer/>
+                        </Column>
+                        <Column maxWidth="-1" minWidth="-1" prefWidth="160" resizable="false">
                           <Title/>
                           <Editor/>
                           <Renderer/>
@@ -163,97 +253,7 @@
                           <Editor/>
                           <Renderer/>
                         </Column>
-                        <Column maxWidth="-1" minWidth="-1" prefWidth="200" resizable="false">
-                          <Title/>
-                          <Editor/>
-                          <Renderer/>
-                        </Column>
-                        <Column maxWidth="-1" minWidth="-1" prefWidth="50" resizable="false">
-                          <Title/>
-                          <Editor/>
-                          <Renderer/>
-                        </Column>
-                        <Column maxWidth="-1" minWidth="-1" prefWidth="180" resizable="false">
-                          <Title/>
-                          <Editor/>
-                          <Renderer/>
-                        </Column>
-                        <Column maxWidth="-1" minWidth="-1" prefWidth="180" resizable="false">
-                          <Title/>
-                          <Editor/>
-                          <Renderer/>
-                        </Column>
-                        <Column maxWidth="-1" minWidth="-1" prefWidth="50" resizable="false">
-                          <Title/>
-                          <Editor/>
-                          <Renderer/>
-                        </Column>
-                        <Column maxWidth="-1" minWidth="-1" prefWidth="200" resizable="false">
-                          <Title/>
-                          <Editor/>
-                          <Renderer/>
-                        </Column>
-                        <Column maxWidth="-1" minWidth="-1" prefWidth="50" resizable="false">
-                          <Title/>
-                          <Editor/>
-                          <Renderer/>
-                        </Column>
-                        <Column maxWidth="-1" minWidth="-1" prefWidth="200" resizable="false">
-                          <Title/>
-                          <Editor/>
-                          <Renderer/>
-                        </Column>
-                        <Column maxWidth="-1" minWidth="-1" prefWidth="50" resizable="false">
-                          <Title/>
-                          <Editor/>
-                          <Renderer/>
-                        </Column>
-                        <Column maxWidth="-1" minWidth="-1" prefWidth="200" resizable="false">
-                          <Title/>
-                          <Editor/>
-                          <Renderer/>
-                        </Column>
-                        <Column maxWidth="-1" minWidth="-1" prefWidth="200" resizable="false">
-                          <Title/>
-                          <Editor/>
-                          <Renderer/>
-                        </Column>
-                        <Column maxWidth="-1" minWidth="-1" prefWidth="100" resizable="false">
-                          <Title/>
-                          <Editor/>
-                          <Renderer/>
-                        </Column>
-                        <Column maxWidth="-1" minWidth="-1" prefWidth="100" resizable="false">
-                          <Title/>
-                          <Editor/>
-                          <Renderer/>
-                        </Column>
-                        <Column maxWidth="-1" minWidth="-1" prefWidth="100" resizable="false">
-                          <Title/>
-                          <Editor/>
-                          <Renderer/>
-                        </Column>
-                        <Column maxWidth="-1" minWidth="-1" prefWidth="100" resizable="false">
-                          <Title/>
-                          <Editor/>
-                          <Renderer/>
-                        </Column>
-                        <Column maxWidth="-1" minWidth="-1" prefWidth="100" resizable="false">
-                          <Title/>
-                          <Editor/>
-                          <Renderer/>
-                        </Column>
-                        <Column maxWidth="-1" minWidth="-1" prefWidth="100" resizable="false">
-                          <Title/>
-                          <Editor/>
-                          <Renderer/>
-                        </Column>
-                        <Column maxWidth="-1" minWidth="-1" prefWidth="200" resizable="false">
-                          <Title/>
-                          <Editor/>
-                          <Renderer/>
-                        </Column>
-                        <Column maxWidth="-1" minWidth="-1" prefWidth="200" resizable="false">
+                        <Column maxWidth="-1" minWidth="-1" prefWidth="220" resizable="false">
                           <Title/>
                           <Editor/>
                           <Renderer/>
